--- a/index.html
+++ b/index.html
@@ -15,7 +15,64 @@
     <title>Gina's Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <!-- Header -->
+    <header class="sticky-top bg-light shadow">
+      <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <div class="container">
+          <!-- Branding -->
+          <a
+            href="#"
+            class="navbar-brand"
+            ><h3 class="fw-bold text-white">Gina P</h3></a
+          >
+          <!-- Mobile Menu Button -->
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <!-- Navbar Links -->
+          <div
+            class="collapse navbar-collapse"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="#hero"
+                  >Home</a
+                >
+                <a
+                  class="nav-link"
+                  href="#about"
+                  >About</a
+                >
+                <a
+                  class="nav-link"
+                  href="#services"
+                  >Services</a
+                >
+                <a
+                  class="nav-link"
+                  href="#testimonials"
+                  >Testimonials</a
+                >
+                <a
+                  class="nav-link"
+                  href="#Contact"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
 
     <script src="script.js"></script>
     <script
