--- a/index.html
+++ b/index.html
@@ -47,24 +47,32 @@
                   href="#hero"
                   >Home</a
                 >
+              </li>
+              <li class="nav-item">
                 <a
                   class="nav-link"
                   href="#about"
                   >About</a
                 >
+              </li>
+              <li class="nav-item">
                 <a
                   class="nav-link"
                   href="#services"
                   >Services</a
                 >
+              </li>
+              <li class="nav-item">
                 <a
                   class="nav-link"
                   href="#testimonials"
                   >Testimonials</a
                 >
+              </li>
+              <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="#Contact"
+                  href="#contact"
                   >Contact</a
                 >
               </li>
