--- a/index.html
+++ b/index.html
@@ -25,14 +25,18 @@
             class="navbar-brand"
             ><h3 class="fw-bold text-white">Gina P</h3></a
           >
-          <!-- Mobile Menu Button -->
+          <!-- Custom Menu Button -->
           <button
-            class="navbar-toggler"
+            class="navbar-toggler border-0"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
+            <!-- This is Bootstrap's built-in animated icon -->
           </button>
 
           <!-- Navbar Links -->
@@ -82,7 +86,9 @@
       </nav>
     </header>
 
+    <!-- Curtom JS -->
     <script src="script.js"></script>
+    <!-- Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
