--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <!-- Custom CSS -->
+    <link
+      href="./styles.css"
+      rel="stylesheet"
+    />
     <title>Gina's Website</title>
   </head>
   <body>
     <!-- Header -->
-    <header class="sticky-top bg-light shadow">
-      <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <header class="sticky-top shadow">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-info fw-bold">
         <div class="container">
           <!-- Branding -->
           <a
@@ -27,7 +32,7 @@
           >
           <!-- Custom Menu Button -->
           <button
-            class="navbar-toggler border-0"
+            class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNav"
@@ -35,47 +40,48 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
-            <!-- This is Bootstrap's built-in animated icon -->
+            <span class="toggler-icon top-bar"></span>
+            <span class="toggler-icon middle-bar"></span>
+            <span class="toggler-icon bottom-bar"></span>
           </button>
 
           <!-- Navbar Links -->
           <div
-            class="collapse navbar-collapse"
+            class="collapse navbar-collapse text-end"
             id="navbarNav"
           >
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                 <a
-                  class="nav-link"
+                  class="nav-link text-white link-info-subtle"
                   href="#hero"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link"
+                  class="nav-link text-white"
                   href="#about"
                   >About</a
                 >
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link"
+                  class="nav-link text-white"
                   href="#services"
                   >Services</a
                 >
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link"
+                  class="nav-link text-white"
                   href="#testimonials"
                   >Testimonials</a
                 >
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link"
+                  class="nav-link text-white"
                   href="#contact"
                   >Contact</a
                 >
@@ -85,6 +91,17 @@
         </div>
       </nav>
     </header>
+
+    <!-- Hero Section -->
+    <section
+      id="hero"
+      class="d-flex align-items-center justify-content-center text-center position-relative"
+    >
+      <!-- Background Image -->
+      <div class="hero-bg d-flex align-items-center justify-content-center">
+        <i class="bi bi-image text-light display-1"></i>
+      </div>
+    </section>
 
     <!-- Curtom JS -->
     <script src="script.js"></script>
