--- a/index.html
+++ b/index.html
@@ -95,11 +95,27 @@
     <!-- Hero Section -->
     <section
       id="hero"
-      class="d-flex align-items-center justify-content-center text-center position-relative"
+      class="d-flex align-items-center justify-content-center text-center"
     >
-      <!-- Background Image -->
-      <div class="hero-bg d-flex align-items-center justify-content-center">
-        <i class="bi bi-image text-light display-1"></i>
+      <div>
+        <div class="container">
+          <div class="row align-items-center">
+            <!-- Left Column -->
+            <div class="col-md-7 text-start">
+              <h1 class="display-4 fw-bold mt-10">Unlock Your Full Potential</h1>
+              <p class="lead">
+                Transform your mindset, achieve your goals, and create the life you deserve.
+              </p>
+              <a
+                href="https://calendly.com/dummy-link"
+                class="schedule btn btn-lg btn-info fw-bold mt-3"
+                >Schedule a Consultation Call</a
+              >
+            </div>
+            <!-- Right Column -->
+            <div class="col-md-6"></div>
+          </div>
+        </div>
       </div>
     </section>
 
