Hero Section for Mobile

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
         <div class="container">
           <div class="row align-items-center">
             <!-- Left Column -->
-            <div class="col-md-7 text-start">
-              <h1 class="display-4 fw-bold mt-10">Unlock Your Full Potential</h1>
-              <p class="lead">
+            <div class="col-md-7 text-md-start">
+              <h1 class="display-4 fw-bold mt-10 mb-3">Unlock Your Full Potential</h1>
+              <p class="lead px-2 mb-3">
                 Transform your mindset, achieve your goals, and create the life you deserve.
               </p>
               <a
@@ -113,7 +113,7 @@
               >
             </div>
             <!-- Right Column -->
-            <div class="col-md-6"></div>
+            <div class="col-md-6 d-none d-md-block"></div>
           </div>
         </div>
       </div>
