--- a/index.html
+++ b/index.html
@@ -102,18 +102,57 @@
           <div class="row align-items-center">
             <!-- Left Column -->
             <div class="col-md-7 text-md-start">
-              <h1 class="display-4 fw-bold mt-10 mb-3">Unlock Your Full Potential</h1>
+              <h1 class="display-4 fw-bold mb-3">Unlock Your Full Potential</h1>
               <p class="lead px-2 mb-3">
                 Transform your mindset, achieve your goals, and create the life you deserve.
               </p>
               <a
                 href="https://calendly.com/dummy-link"
-                class="schedule btn btn-lg btn-info fw-bold mt-3"
+                class="schedule btn btn-lg btn-info fw-bold mt-3 shadow"
                 >Schedule a Consultation Call</a
               >
             </div>
             <!-- Right Column -->
             <div class="col-md-6 d-none d-md-block"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About Section -->
+    <section
+      id="id"
+      class="py-5 bg-light"
+    >
+      <div class="container">
+        <div class="row align-items-center g-5">
+          <!-- Profile Photo -->
+          <div class="col-lg-5 text-center">
+            <img
+              src="assets/img/profile.jpg"
+              alt="Gina's profile picture"
+              class="img-fluid mw-25 rounded-4 shadow about-img"
+            />
+          </div>
+
+          <!-- Bio & Credentials -->
+          <div class="col-lg-7 mt-4 mt-lg-0">
+            <h2 class="fw-bold mt-4 mb-4 text-center text-md-start">Meet Gina 😋</h2>
+            <p class="lead text-muted">
+              With years of experience in personal development and coaching, Gina has helped
+              countless clients achieve breakthroughs in their lives and careers.
+            </p>
+            <p class="lead text-muted">
+              Using a personalized approach, Gina empowers individuals to overcome obstacles, set
+              clear goals, and create lasting positive change.
+            </p>
+
+            <!-- Credentials -->
+            <div class="mt-5 d-flex gap-3">
+              <span class="badge badge1 fs-6 p-3">Certified Badass</span>
+              <span class="badge badge2 fs-6 p-3">Laughaholic</span>
+              <span class="badge badge3 fs-6 p-3">Wicked Smart</span>
+            </div>
           </div>
         </div>
       </div>
