fixed about link

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     <!-- About Section -->
     <section
-      id="id"
+      id="about"
       class="py-5 bg-light"
     >
       <div class="container">
