--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!-- About Section -->
     <section
       id="about"
-      class="py-5 bg-light"
+      class="py-5 bg-body"
     >
       <div class="container">
         <div class="row align-items-center g-5">
@@ -154,6 +154,73 @@
               <span class="badge badge3 fs-6 p-3">Wicked Smart</span>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Services Section -->
+    <section
+      id="services"
+      class="py5 bg-light"
+    >
+      <div class="container">
+        <h2 class="text-center fwbold mb-5 pt-5">✨ My Coaching Services ✨</h2>
+        <div class="row g-4 pb-5">
+          <!-- Service 1 -->
+          <div class="col-md-6 col-lg 4">
+            <div class="card h-100 shadow service-card">
+              <div class="card-body text-center">
+                <h3 class="fw-bold py-3">🧠 Mindset Coaching</h3>
+                <p class="text-muted text-start">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod, ipsum
+                  vitae suscipit sagittis, massa nisl sollicitudin quam, ac porttitor ligula ligula
+                  eu magna. Ut auctor nunc ac dapibus consequat. Nulla porttitor, tortor ultricies
+                  gravida mattis.
+                </p>
+                <p class="fw-bold text-info">Starting at $XXX</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Service 2 -->
+          <div class="col-md-6 col-lg 4">
+            <div class="card h-100 shadow service-card">
+              <div class="card-body text-center">
+                <h3 class="fw-bold py-3">🎯 Goal Setting</h3>
+                <p class="text-muted text-start">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod, ipsum
+                  vitae suscipit sagittis, massa nisl sollicitudin quam, ac porttitor ligula ligula
+                  eu magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                  inceptos himenaeos. Ut auctor nunc ac dapibus consequat. Nulla porttitor, tortor
+                  ultricies gravida mattis.
+                </p>
+                <p class="fw-bold text-info">Starting at $XXX</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Service 3 -->
+          <div class="col-md-6 col-lg 4">
+            <div class="card h-100 shadow service-card">
+              <div class="card-body text-center">
+                <h3 class="fw-bold py-3">💪 Confidence Boost</h3>
+                <p class="text-muted text-start">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod, ipsum
+                  vitae suscipit sagittis, massa nisl sollicitudin quam, ac porttitor ligula ligula
+                  eu magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                  inceptos himenaeos.
+                </p>
+                <p class="fw-bold text-info">Starting at $XXX</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center pb-5">
+          <a
+            href="https://calendly.com/dummy-link"
+            class="schedule btn btn-lg btn-info fw-bold mt-3"
+            >Schedule a Consultation Call</a
+          >
         </div>
       </div>
     </section>
