--- a/index.html
+++ b/index.html
@@ -225,8 +225,110 @@
       </div>
     </section>
 
+    <!-- Testimonials Section -->
+    <section
+      id="testimonials"
+      class="py-5 bg-body"
+    >
+      <div class="container">
+        <h2 class="text-center fw-bold mb-5">What Clients Say</h2>
+
+        <div
+          id="testimonialCarousel"
+          class="carousel carousel-dark slide"
+          data-bs-ride="carousel"
+        >
+          <!-- Indicators -->
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#testimonialCarousel"
+              data-bs-slide-to="0"
+              class="active"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#testimonialCarousel"
+              data-bs-slide-to="1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#testimonialCarousel"
+              data-bs-slide-to="2"
+            ></button>
+          </div>
+
+          <!-- Carousel Inner -->
+          <div class="carousel-inner">
+            <!-- Testimonial 1 -->
+            <div class="carousel-item active">
+              <div class="testimonial-card text-center p-4 bg-light shadow rounded">
+                <img
+                  src="assets/img/profile1.jpg"
+                  class="rounded-circle mb-3"
+                  alt="client picture"
+                />
+                <p class="lead fst-italic">
+                  "Gina transformed my mindset! I now feel more confident and motivated than ever."
+                </p>
+                <h5 class="fw-bold">~ Sarah L.</h5>
+              </div>
+            </div>
+
+            <!-- Testimonial 2 -->
+            <div class="carousel-item active">
+              <div class="testimonial-card text-center p-4 bg-light shadow rounded">
+                <img
+                  src="assets/img/profile2.jpg"
+                  class="rounded-circle mb-3"
+                  alt="client picture"
+                />
+                <p class="lead fst-italic">
+                  "Gina's coaching is life-changing. She helped me take action with confidence!"
+                </p>
+                <h5 class="fw-bold">~ Emily T.</h5>
+              </div>
+            </div>
+
+            <!-- Testimonial 3 -->
+            <div class="carousel-item active">
+              <div class="testimonial-card text-center p-4 bg-light shadow rounded">
+                <img
+                  src="assets/img/profile3.jpg"
+                  class="rounded-circle mb-3"
+                  alt="client picture"
+                />
+                <p class="lead fst-italic">
+                  "I reached my goals faster than I ever imagined. Highly recommend!"
+                </p>
+                <h5 class="fw-bold">~ Michael R.</h5>
+              </div>
+            </div>
+          </div>
+
+          <!-- Controls -->
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#testimonialCarousel"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#testimonialCarousel"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
+      </div>
+    </section>
+
     <!-- Curtom JS -->
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
     <!-- Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
