fixed carousel timing

--- a/index.html
+++ b/index.html
@@ -236,10 +236,11 @@
         <div
           id="testimonialCarousel"
           class="carousel carousel-dark slide"
+          data-bs-interval="7000"
           data-bs-ride="carousel"
         >
           <!-- Indicators -->
-          <div class="carousel-indicators">
+          <div class="carousel-indicators mt-3">
             <button
               type="button"
               data-bs-target="#testimonialCarousel"
@@ -262,7 +263,7 @@
           <div class="carousel-inner">
             <!-- Testimonial 1 -->
             <div class="carousel-item active">
-              <div class="testimonial-card text-center p-4 bg-light shadow rounded">
+              <div class="testimonial-card text-center p-5 bg-light shadow rounded">
                 <img
                   src="assets/img/profile1.jpg"
                   class="rounded-circle mb-3"
@@ -276,8 +277,8 @@
             </div>
 
             <!-- Testimonial 2 -->
-            <div class="carousel-item active">
-              <div class="testimonial-card text-center p-4 bg-light shadow rounded">
+            <div class="carousel-item">
+              <div class="testimonial-card text-center p-5 bg-light shadow rounded">
                 <img
                   src="assets/img/profile2.jpg"
                   class="rounded-circle mb-3"
@@ -291,8 +292,8 @@
             </div>
 
             <!-- Testimonial 3 -->
-            <div class="carousel-item active">
-              <div class="testimonial-card text-center p-4 bg-light shadow rounded">
+            <div class="carousel-item">
+              <div class="testimonial-card text-center p-5 bg-light shadow rounded">
                 <img
                   src="assets/img/profile3.jpg"
                   class="rounded-circle mb-3"
