--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </p>
 
             <!-- Credentials -->
-            <div class="mt-5 d-flex gap-3">
+            <div class="mt-5 d-flex flex-column flex-md-row gap-3 credentials-container">
               <span class="badge badge1 fs-6 p-3">Certified Badass</span>
               <span class="badge badge2 fs-6 p-3">Laughaholic</span>
               <span class="badge badge3 fs-6 p-3">Wicked Smart</span>
@@ -169,7 +169,7 @@
           <!-- Service 1 -->
           <div class="col-md-6 col-lg 4">
             <div class="card h-100 shadow service-card">
-              <div class="card-body text-center">
+              <div class="card-body text-center d-flex flex-column justify-content-between">
                 <h3 class="fw-bold py-3">🧠 Mindset Coaching</h3>
                 <p class="text-muted text-start">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod, ipsum
@@ -177,7 +177,7 @@
                   eu magna. Ut auctor nunc ac dapibus consequat. Nulla porttitor, tortor ultricies
                   gravida mattis.
                 </p>
-                <p class="fw-bold text-info">Starting at $XXX</p>
+                <p class="fw-bold text-info mt-auto">Starting at $XXX</p>
               </div>
             </div>
           </div>
@@ -185,7 +185,7 @@
           <!-- Service 2 -->
           <div class="col-md-6 col-lg 4">
             <div class="card h-100 shadow service-card">
-              <div class="card-body text-center">
+              <div class="card-body text-center d-flex flex-column justify-content-between">
                 <h3 class="fw-bold py-3">🎯 Goal Setting</h3>
                 <p class="text-muted text-start">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod, ipsum
@@ -202,7 +202,7 @@
           <!-- Service 3 -->
           <div class="col-md-6 col-lg 4">
             <div class="card h-100 shadow service-card">
-              <div class="card-body text-center">
+              <div class="card-body text-center d-flex flex-column justify-content-between">
                 <h3 class="fw-bold py-3">💪 Confidence Boost</h3>
                 <p class="text-muted text-start">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod, ipsum
