--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+    />
+
     <!-- Custom CSS -->
     <link
       href="./styles.css"
@@ -95,7 +100,7 @@
     <!-- Hero Section -->
     <section
       id="hero"
-      class="d-flex align-items-center justify-content-center text-center"
+      class="d-flex align-items-center justify-content-center"
     >
       <div>
         <div class="container">
@@ -236,8 +241,7 @@
         <div
           id="testimonialCarousel"
           class="carousel carousel-dark slide"
-          data-bs-interval="7000"
-          data-bs-ride="carousel"
+          data-bs-interval="false"
         >
           <!-- Indicators -->
           <div class="carousel-indicators mt-3">
@@ -260,7 +264,7 @@
           </div>
 
           <!-- Carousel Inner -->
-          <div class="carousel-inner">
+          <div class="carousel-inner rounded-3">
             <!-- Testimonial 1 -->
             <div class="carousel-item active">
               <div class="testimonial-card text-center p-5 bg-light shadow rounded">
@@ -324,6 +328,119 @@
           >
             <span class="carousel-control-next-icon"></span>
           </button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section
+      id="contact"
+      class="py-5 bg-light"
+    >
+      <div class="container d-flex justify-content-center">
+        <div class="row text-center">
+          <h2 class="fw-bold mb-2">Get in Touch</h2>
+          <p class="text-muted mb-4">
+            Feel free to reach out for coaching inquiries or collaborations.
+          </p>
+          <div class="d-flex justify-content-center mb-5">
+            <a
+              href="https://calendly.com/dummy-link"
+              class="schedule btn btn-lg btn-info fw-bold mt-3"
+              >Schedule a Consultation Call</a
+            >
+          </div>
+
+          <div class="row justify-content-between align-items-center">
+            <div class="col-lg-5">
+              <h3 class="text-start mb-3">Contacts</h3>
+
+              <ul class="list-unstyled">
+                <li class="d-flex gap-3">
+                  <strong>Email: </strong>
+                  <p>example@example.com</p>
+                </li>
+                <li class="d-flex gap-3">
+                  <strong>Phone: </strong>
+                  <p>(123) 456-7899</p>
+                </li>
+              </ul>
+
+              <hr class="my-4" />
+
+              <h3 class="text-start mb-3">Follow Me</h3>
+              <div class="d-flex text-start gap-3 mt-3">
+                <a
+                  href="#"
+                  class="text-dark fs-2"
+                  ><i class="bi bi-facebook"></i
+                ></a>
+                <a
+                  href="#"
+                  class="text-dark fs-2"
+                  ><i class="bi bi-twitter-x"></i
+                ></a>
+                <a
+                  href="#"
+                  class="text-dark fs-2"
+                  ><i class="bi bi-linkedin"></i
+                ></a>
+                <a
+                  href="#"
+                  class="text-dark fs-2"
+                  ><i class="bi bi-instagram"></i
+                ></a>
+              </div>
+            </div>
+
+            <!-- Send a Message Form -->
+            <div class="col-lg-5">
+              <div class="card p-4 shadow-sm">
+                <h3 class="text-center mb-3">Send a Message</h3>
+                <form action="#">
+                  <div class="mb-3">
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="name"
+                      placeholder="Name"
+                      required
+                    />
+                  </div>
+
+                  <div class="mb-3">
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="email"
+                      placeholder="Email"
+                      required
+                    />
+                  </div>
+
+                  <div class="mb-3">
+                    <textarea
+                      type="message"
+                      class="form-control"
+                      id="message"
+                      rows="4"
+                      placeholder="Message"
+                      required
+                    ></textarea>
+                  </div>
+
+                  <div class="text-center">
+                    <button
+                      type="submit"
+                      class="btn submit-button w-50 fw-bold"
+                    >
+                      Submit
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
