--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     >
       <div>
         <div class="container">
-          <div class="row align-items-center">
+          <div class="row align-items-center gap-5">
             <!-- Left Column -->
-            <div class="col-md-7 text-md-start">
+            <div class="col-md-6 text-center text-md-start">
               <h1 class="display-4 fw-bold mb-3">Unlock Your Full Potential</h1>
               <p class="lead px-2 mb-3">
                 Transform your mindset, achieve your goals, and create the life you deserve.
@@ -351,50 +351,10 @@
             >
           </div>
 
-          <div class="row justify-content-between align-items-center">
-            <div class="col-lg-5">
-              <h3 class="text-start mb-3">Contacts</h3>
-
-              <ul class="list-unstyled">
-                <li class="d-flex gap-3">
-                  <strong>Email: </strong>
-                  <p>example@example.com</p>
-                </li>
-                <li class="d-flex gap-3">
-                  <strong>Phone: </strong>
-                  <p>(123) 456-7899</p>
-                </li>
-              </ul>
-
-              <hr class="my-4" />
-
-              <h3 class="text-start mb-3">Follow Me</h3>
-              <div class="d-flex text-start gap-3 mt-3">
-                <a
-                  href="#"
-                  class="text-dark fs-2"
-                  ><i class="bi bi-facebook"></i
-                ></a>
-                <a
-                  href="#"
-                  class="text-dark fs-2"
-                  ><i class="bi bi-twitter-x"></i
-                ></a>
-                <a
-                  href="#"
-                  class="text-dark fs-2"
-                  ><i class="bi bi-linkedin"></i
-                ></a>
-                <a
-                  href="#"
-                  class="text-dark fs-2"
-                  ><i class="bi bi-instagram"></i
-                ></a>
-              </div>
-            </div>
-
-            <!-- Send a Message Form -->
-            <div class="col-lg-5">
+          <!-- Two Columns, Adjust order on small screens -->
+          <div class="row justify-content-between align-items-center mt-3">
+            <!-- Send a Message Form Column -->
+            <div class="col-lg-5 mb-5 order-1 order-lg-2">
               <div class="card p-4 shadow-sm">
                 <h3 class="text-center mb-3">Send a Message</h3>
                 <form action="#">
@@ -438,6 +398,48 @@
                     </button>
                   </div>
                 </form>
+              </div>
+            </div>
+
+            <!-- Contact / Follow Me Column -->
+            <div class="col-lg-5 order-2 order-lg-1 my-4">
+              <h3 class="text-start mb-3">Contacts</h3>
+
+              <ul class="list-unstyled">
+                <li class="d-flex gap-3">
+                  <strong>Email: </strong>
+                  <p>example@example.com</p>
+                </li>
+                <li class="d-flex gap-3">
+                  <strong>Phone: </strong>
+                  <p>(123) 456-7899</p>
+                </li>
+              </ul>
+
+              <hr class="my-4" />
+
+              <h3 class="text-start mb-3">Follow Me</h3>
+              <div class="d-flex text-start gap-3 mt-3">
+                <a
+                  href="#"
+                  class="text-dark fs-2"
+                  ><i class="bi bi-facebook"></i
+                ></a>
+                <a
+                  href="#"
+                  class="text-dark fs-2"
+                  ><i class="bi bi-twitter-x"></i
+                ></a>
+                <a
+                  href="#"
+                  class="text-dark fs-2"
+                  ><i class="bi bi-linkedin"></i
+                ></a>
+                <a
+                  href="#"
+                  class="text-dark fs-2"
+                  ><i class="bi bi-instagram"></i
+                ></a>
               </div>
             </div>
           </div>
