--- a/index.html
+++ b/index.html
@@ -447,6 +447,13 @@
       </div>
     </section>
 
+    <!-- Footer Section -->
+    <footer class="text-white text-center py-5">
+      <div class="container">
+        <p class="mb-2">&copy; 2025 Your Name or Business. All rights reserved.</p>
+      </div>
+    </footer>
+
     <!-- Curtom JS -->
     <script src="/script.js"></script>
     <!-- Bootstrap -->
