Added background image to Testimonials Section

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <!-- Testimonials Section -->
     <section
       id="testimonials"
-      class="py-5 bg-body"
+      class="py-5"
     >
       <div class="container">
         <h2 class="text-center fw-bold mb-5">What Clients Say</h2>
@@ -273,7 +273,7 @@
           <div class="carousel-inner rounded-3">
             <!-- Testimonial 1 -->
             <div class="carousel-item active">
-              <div class="testimonial-card text-center p-5 bg-light shadow rounded">
+              <div class="testimonial-card text-center p-5 bg-body shadow rounded">
                 <img
                   src="assets/img/profile1.jpg"
                   class="rounded-circle mb-3"
@@ -288,7 +288,7 @@
 
             <!-- Testimonial 2 -->
             <div class="carousel-item">
-              <div class="testimonial-card text-center p-5 bg-light shadow rounded">
+              <div class="testimonial-card text-center p-5 bg-body shadow rounded">
                 <img
                   src="assets/img/profile2.jpg"
                   class="rounded-circle mb-3"
@@ -303,7 +303,7 @@
 
             <!-- Testimonial 3 -->
             <div class="carousel-item">
-              <div class="testimonial-card text-center p-5 bg-light shadow rounded">
+              <div class="testimonial-card text-center p-5 bg-body shadow rounded">
                 <img
                   src="assets/img/profile3.jpg"
                   class="rounded-circle mb-3"
