changed button styling

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               </p>
               <a
                 href=""
-                class="schedule btn btn-lg btn-info fw-bold mt-3 shadow"
+                class="schedule btn btn-lg btn-info fw-bold mt-3 shadow text-white"
                 onclick="Calendly.initPopupWidget({url: 'https://calendly.com/rene-salomone/30min'});return false;"
                 >Schedule a Consultation Call</a
               >
@@ -228,7 +228,7 @@
         <div class="d-flex justify-content-center pb-5">
           <a
             href=""
-            class="schedule btn btn-lg btn-info fw-bold mt-3 shadow"
+            class="schedule btn btn-lg btn-info fw-bold mt-3 text-white"
             onclick="Calendly.initPopupWidget({url: 'https://calendly.com/rene-salomone/30min'});return false;"
             >Schedule a Consultation Call</a
           >
@@ -352,14 +352,14 @@
           <div class="d-flex justify-content-center mb-5">
             <a
               href=""
-              class="schedule btn btn-lg btn-info fw-bold mt-3 shadow"
+              class="schedule btn btn-lg btn-info fw-bold mt-3 text-white"
               onclick="Calendly.initPopupWidget({url: 'https://calendly.com/rene-salomone/30min'});return false;"
               >Schedule a Consultation Call</a
             >
           </div>
 
           <!-- Two Columns, Adjust order on small screens -->
-          <div class="row justify-content-between align-items-center mt-3">
+          <div class="row justify-content-between align-items-center mt-5">
             <!-- Send a Message Form Column -->
             <div class="col-lg-5 mb-5 order-1 order-lg-2">
               <div class="card p-4 shadow-sm">
@@ -399,7 +399,7 @@
                   <div class="text-center">
                     <button
                       type="submit"
-                      class="btn submit-button w-50 fw-bold"
+                      class="btn submit-button w-50 fw-bold text-white"
                     >
                       Submit
                     </button>
