--- a/index.html
+++ b/index.html
@@ -6,19 +6,28 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <!-- Bootstrap Icons -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
     />
+    <!-- Calendly CSS -->
     <link
       rel="stylesheet"
       href="https://assets.calendly.com/assets/external/widget.css"
+    />
+    <!-- Toastify CSS -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
 
     <!-- Custom CSS -->
@@ -364,11 +373,27 @@
             <div class="col-lg-5 mb-5 order-1 order-lg-2">
               <div class="card p-4 shadow-sm">
                 <h3 class="text-center mb-3">Send a Message</h3>
-                <form action="#">
+                <form
+                  action="https://api.web3forms.com/submit"
+                  method="POST"
+                >
+                  <!-- Web3Forms Public Access Key -->
+                  <input
+                    type="hidden"
+                    name="access_key"
+                    value="c7a48232-96d7-4a10-9d7c-689267badbc6"
+                  />
+                  <!-- Send to Client Email -->
+                  <input
+                    type="hidden"
+                    name="recipients"
+                    value="rene.salomone@gmail.com"
+                  />
                   <div class="mb-3">
                     <input
                       type="text"
                       class="form-control"
+                      name="name"
                       id="name"
                       placeholder="Name"
                       required
@@ -379,6 +404,7 @@
                     <input
                       type="email"
                       class="form-control"
+                      name="email"
                       id="email"
                       placeholder="Email"
                       required
@@ -389,6 +415,7 @@
                     <textarea
                       type="message"
                       class="form-control"
+                      name="message"
                       id="message"
                       rows="4"
                       placeholder="Message"
@@ -463,17 +490,22 @@
 
     <!-- Custom JS -->
     <script src="/script.js"></script>
-    <!-- Calendly Script -->
+    <!-- Calendly JS -->
     <script
       src="https://assets.calendly.com/assets/external/widget.js"
       type="text/javascript"
       async
     ></script>
-    <!-- Bootstrap -->
+    <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
+    ></script>
+    <!-- Toastify JS -->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"
     ></script>
   </body>
 </html>
